<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.notifications.NotificationsFragment" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <TextView
        android:id="@+id/text_notifications"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:minWidth="500dp"
        android:minHeight="800dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="179dp"
            android:background="@drawable/custom_card"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="10dp">


                <ImageView
                    android:id="@+id/back_arrow1"
                    android:layout_width="48dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:layout_margin="10dp"
                    android:src="@drawable/ic_baseline_arrow_back_ios_new_24" />

                <ImageView
                    android:id="@+id/more"
                    android:layout_width="48dp"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_toStartOf="@+id/search"
                    android:src="@drawable/ic_baseline_search_24" />

                <ImageView
                    android:id="@+id/search"
                    android:layout_width="53dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_margin="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:src="@drawable/ic_baseline_view_headline_24" />


            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="0.9"
                    android:text="@string/air"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    android:textStyle="normal" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="0.1"
                    android:layout_marginEnd="30dp"
                    android:text="@string/doller"
                    android:textSize="30sp"
                    android:textStyle="bold" />

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sort"
                android:textStyle="bold"
                android:textSize="22sp"
                android:textColor="#3F51B5"
                android:layout_margin="10dp"/>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/appbutton_desiging"
                android:backgroundTint="#2196F3"
                android:text="@string/price"
                android:layout_margin="10dp"
                android:textColor="@color/white"
                android:textAllCaps="false"/>



            <!--        <androidx.appcompat.widget.AppCompatButton-->
            <!--            android:layout_width="137dp"-->
            <!--            android:layout_height="wrap_content"-->
            <!--            android:layout_gravity="center"-->
            <!--            android:background="@drawable/appbutton_design"-->
            <!--            android:backgroundTint="#FFEB3B"-->
            <!--            android:text="Let Go!"-->
            <!--            android:layout_marginTop="40dp"-->
            <!--            android:textColor="@color/white"-->
            <!--            android:textSize="24sp"/>-->

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="horizontal"
            android:weightSum="4">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="@string/time1"
                android:textColor="@color/black" />

            <ImageView
                android:layout_width="44dp"
                android:layout_height="22dp"
                android:layout_margin="10dp"
                android:src="@drawable/img_4" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="@string/time2"
                android:textColor="#F43333" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:drawableStart="@drawable/ic_baseline_access_time_24"
                android:text="@string/time233"
                android:textColor="@color/teal_200"
                android:textStyle="bold" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_margin="10dp"
                android:text="@string/mon1"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/mon11"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="99dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="102dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/direct"
                android:textColor="@color/black" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:weightSum="2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="0.8"
                android:text="@string/y1"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1.2"
                android:text="@string/y1"
                android:textColor="@color/black" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:weightSum="1">

            <TextView
                android:layout_width="43dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="0.4"
                android:text="@string/los"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="0.6"
                android:text="@string/lon"
                android:textColor="@color/black" />

        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bagg"
            android:layout_margin="10dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#2196F3"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:drawableStart="@drawable/ic_baseline_work_24"/>


        <View
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:background="#080"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:orientation="horizontal"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:weightSum="4">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="@string/time3"
                android:textColor="@color/black" />

            <ImageView
                android:layout_width="44dp"
                android:layout_height="27dp"
                android:layout_margin="10dp"
                android:src="@drawable/img_4" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="@string/time4"
                android:textColor="#F43333" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:drawableStart="@drawable/ic_baseline_access_time_24"
                android:text="@string/time233"
                android:textColor="@color/teal_200"
                android:textStyle="bold" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/month1"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/month"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="102dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/direct"
                android:textColor="@color/black" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:weightSum="2">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/y1"
                android:layout_margin="10dp"
                android:textColor="@color/black"
                android:layout_weight="0.8"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/y1"
                android:layout_margin="10dp"
                android:textColor="@color/black"
                android:layout_weight="1.2"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:weightSum="2">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lon"
                android:layout_margin="10dp"
                android:textColor="@color/black"
                android:layout_weight="0.9"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/los"
                android:layout_margin="10dp"
                android:textColor="@color/black"
                android:layout_weight="1.1"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bagg"
            android:layout_margin="10dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#2196F3"
            android:drawableStart="@drawable/ic_baseline_work_24"/>




        <View
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:background="#080"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            />



    </LinearLayout>
</LinearLayout>
</FrameLayout>
